v25.04/en/_sources/modules.rst.txt
Software modules

The

rc_visard

 comes with several on-board software modules, each of which
corresponds to a certain functionality and can be interfaced via its
respective

node

 in the

REST-API interface

.

The

rc_visard

's software modules can be divided into

Camera module\:(Section \ref{camera:sect-camera})  acquires images and
performs planar rectification for using the camera as a measurement
device. Images are provided both for further internal processing by
other modules and for external use as GenICam image streams.

Stereo matching module\:(Section \ref{stereo_matching:sect-stereo-
matching})  which provides 3D depth information such as disparity,
error, and confidence images, and is also accessible via the
rc_visard's GigE Vision/GenICam interface,

Navigation modules\:(Section \ref{navigation_modules:sect-navigation-
modules})  which provide estimates of rc_visard's current pose,
velocity, and acceleration,

Detection & Measure modules\:(Section \ref{detection_modules:sect-
detection-modules})  which provide a variety of detection
functionalities, such as grasp point computation and object detection,

Configuration modules\:(Section \ref{configuration_modules:sect-
configuration-modules})  which enable the user to perform calibrations
and configure the rc_visard for specific applications.

Database modules\:(Section \ref{database_modules:sect-database-
modules})  which enable the user to configure global data available to
all other modules, such as load carriers, regions of interest and
grippers.

